plugins {
    id 'java'
}

group 'io.github.l-Luna'
version '0.1'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'ch.epfl.scala:bsp4j:2.1.0-M1'
    implementation files('libs/CyclicCompiler-0.0.4.jar')

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

test {
    useJUnitPlatform()
    jvmArgs += "--enable-preview"
}

task fatJar(type: Jar){
    manifest {
        attributes 'Main-Class': 'cyclic.bsp.ServerLauncher'
    }
    from{
        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
    } {
        exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    }
    duplicatesStrategy "exclude"
    with jar
}

tasks.withType(JavaExec){
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaCompile){
    sourceCompatibility = JavaVersion.VERSION_17.toString()
    targetCompatibility = JavaVersion.VERSION_17.toString()
    options.compilerArgs.add("--enable-preview")
}